# auth_rs

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  committed.toml  default.nix  deny.toml  docker-compose.yml  docker.nix  flake.nix  shell.nix  typos.toml
.direnv/: flake-profile-1-link
.github/: dependabot.yml  release_notes.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  committed.yml  post-release.yml  pre-commit.yml  release.yml  spelling.yml  test.yml
.sqlx/: query-08f6233da399dbe2e90cb012d1d2afd2e89da29735398bb070e642b82069ec92.json  query-10f384411bb238547b89ae081d09da3e806d2aafc292313a50c7b56d1798a8f7.json  query-423ba731af27eb509f2137a3d8840e03c6b36ce0d442e3fcb8c2f8b9404e0f5d.json  query-4d2bb05bb9d9d4fb1c8d81e8abddf38e542d3875bf51394fbbbcfd1844dd9882.json  query-51ac9db28164d192096dbff555dc6f0109a6c93b36800a818cfc509c79208210.json  query-5ee113020a22555609e96b1b6a41b0f0f57e6c42162a83eef3990a99cb059900.json  query-74ebef4389187c978095e02d8c1d2c353e4a704efa08c6c38914b8e5514981ac.json  query-9fe47e06e69837ee69cf70a1afead56a32b346eb30af4c6c02b49543eacb1c7f.json  query-a7da26ab1348cd70027e19dc9e49edc9a1d82133343b144a642d93029a0ae1d4.json  query-b69a6f42965b3e7103fcbf46e39528466926789ff31e9ed2591bb175527ec169.json  query-e151dfc9c1cad7131bc0c1ff4bcd9173a05ea514fd79f6d622692c093dc70d72.json  query-e8eb9f0066ac58c814c90cac81c2ab7875649b19d851ecd244120c74d06b38b9.json  query-f956ec7d4ba09c840467040c788a0fe889fd263cc2ba5fb5d2c73f77ef5453e5.json
docs/: API.md
src/: bootstrap.rs  handler.rs  lib.rs  main.rs  models.rs  services.rs
src/configuration/: base.rs  config.rs  database.rs  db.rs  email.rs  env_reader.rs  environment.rs  jwt.rs  mod.rs  rate_limit.rs  redis.rs  server.rs
src/controller/: health.rs  mod.rs  user.rs
src/controllers/: auth.rs  health_check.rs  mod.rs  session.rs  token.rs  user.rs
src/db/migrations/: 20240928174107_create_auth_tables.sql  20241010101031_auth.sql
src/dto/: auth.rs  create_user.rs  email_verification.rs  mod.rs  register_request.rs  register_user.rs  reset_email.rs  reset_password.rs  token.rs  update_user.rs  user.rs
src/errors/: bad_request.rs  internal_server_error.rs  mod.rs
src/middlewares/: auth.rs  rate_limit.rs
src/models/: account.rs  email_verification.rs  email_verification_token.rs  mod.rs  refresh_token.rs  reset_token.rs  session.rs  token.rs  user.rs
src/repositories/: email_verification.rs  mod.rs  refresh_token.rs  session.rs  user.rs
src/repository/: user.rs
src/service/: jwt.rs  mod.rs  password.rs  user.rs  validation.rs
src/services/: auth.rs  jwt.rs  mod.rs  refresh_token.rs  session.rs  user.rs
src/services/email_verification/: email_service.rs  email_verification_service.rs  mod.rs  token_service.rs
src/services/user/: jwt_service.rs  mod.rs  password_service.rs  user_service.rs  validation_service.rs
src/token/: claims.rs  jwt.rs
src/utils/: config.rs  error.rs  extractor.rs  hashing.rs  jwt.rs  mod.rs  password.rs  response.rs  validation.rs
tests/: common.rs  health_check.rs  user.rs
