[package]
name = "auth_rs"
version = "1.0.0"
edition = "2021"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
description = "Auth service PoC in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/xosnrdev/auth_rs"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "auth_rs"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = [
  "clock",
  "serde",
] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }

uuid = { version = "1.10.0", features = ["v4", "serde"] }
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "1.0.64"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
actix-web = "4.9.0"
validator = { version = "0.18.1", features = ["derive"] }
regex = "1.11.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
