[package]
name = "auth"
version = "0.2.0"
rust-version = "1.83"
edition = "2021"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
description = "Auth Service PoC in Rust"
license = "MIT"
homepage = "https://github.com/xosnrdev/auth-rs?tab=readme-ov-file#readme"
repository = "https://github.com/xosnrdev/auth-rs"

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.94"
argon2 = "0.5.3"
axum = { version = "0.7.9", features = ["tracing"] }
axum-extra = { version = "0.9.6", features = [
  "cookie",
  "typed-header",
  "cookie-private",
] }
chrono = { version = "0.4.38", default-features = false, features = [
  "clock",
  "serde",
] }
config = "0.15.4"
dotenv = "0.15.0"
getset = "0.1.3"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full"] }

tower = { version = "0.5.2", features = ["buffer", "limit", "util"] }
tower-http = { version = "0.6.2", features = ["cors", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }

uuid = { version = "1.10.0", features = ["v4", "serde"] }
validator = { version = "0.19.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.133"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
